--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ function showFinal(){
   // Send email on final button
   document.getElementById("finalBtn").onclick = function() {
     let msg = answers.map(a => `Q: ${a.q}\nA: ${a.a}`).join("\n\n");
-    emailjs.send("service_51qmn4e", "template_valentine", {
+    emailjs.send("service_51qmn4e", "template_j1f79kf", {
       to_email: "dhunganaayush9@gmail.com", // Replace with your email
       message: msg
     }).then(function(){
